[package]
name = "TransCuty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyrand = "0.5.0"
md5 = "0.7.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde_json = "1.0.96"
serde = {version = "^1.0", features = ["derive"]}

libc = "0.2"
x11 = {version = "2.18", features = ["xlib", "xrecord", "xinput"]}
rdev = {version = "0.5.3"}